test/corpus/continue.txt
========================================================
Set can_vote to true for every person over 18 years old
========================================================

FOR $person IN (SELECT id, age FROM person) {
	IF ($person.age < 18) {
		CONTINUE;
	};

	UPDATE $person.id SET can_vote = true;
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (for_statement
          (keyword_for)
          (variable_name)
          (keyword_in)
          (value
            (base_value
              (sub_query
                (expression
                  (subquery_statement
                    (select_statement
                      (select_clause
                        (keyword_select)
                        (inclusive_predicate
                          (predicate
                            (value
                              (base_value
                                (identifier)))))
                        (inclusive_predicate
                          (predicate
                            (value
                              (base_value
                                (identifier))))))
                      (from_clause
                        (keyword_from)
                        (value
                          (base_value
                            (identifier))))))))))
          (block
            (expressions
              (expression
                (subquery_statement
                  (if_statement
                    (keyword_if)
                    (value
                      (base_value
                        (sub_query
                          (expression
                            (value
                              (binary_expression
                                (value
                                  (path
                                    (base_value
                                      (variable_name))
                                    (path_element
                                      (subscript
                                        (identifier)))))
                                (operator)
                                (value
                                  (base_value
                                    (number
                                      (int))))))))))
                    (block
                      (expressions
                        (expression
                          (primary_statement
                            (continue_statement
                              (keyword_continue))))
                        (semi_colon))))))
              (semi_colon)
              (expression
                (subquery_statement
                  (update_statement
                    (keyword_update)
                    (value
                      (path
                        (base_value
                          (variable_name))
                        (path_element
                          (subscript
                            (identifier)))))
                    (set_clause
                      (keyword_set)
                      (field_assignment
                        (identifier)
                        (assignment_operator)
                        (value
                          (base_value
                            (keyword_true))))))))
              (semi_colon))))))
    (semi_colon)))
